# purrxelity

./: Dockerfile  api_base.py  code_tool.py  datetime_tool.py  flight_status.py  git.sh  gmail_integr.py  oauth_test.py  playwright_main.py  pyproject.toml  rag_main.py  rag_processing.py  requirements.txt  schemas.py  search_main.py  server_run.sh  train_status.py
database/: crud.py  database.py  models.py  schemas.py
deep_research/: class_def.py  deep_research.py  duckduckgo_main.py  output.txt  research_subgraph.py  supervisor_subgraph.py  temp.txt
frontend/: tailwind.config.ts
frontend/app/: layout.tsx
frontend/app/chat/: page.tsx
frontend/components/chat/: chat-avatar.tsx  chat-input.tsx  chat-layout.tsx  chat-messages.tsx  sidebar.tsx
src/: next.config.ts
src/app/: globals.css  layout.tsx
src/app/chat/: page.tsx
src/components/chat/: chat-input.tsx  chat-layout.tsx  chat-messages.tsx  sidebar.tsx
